--- a/css/style.css
+++ b/css/style.css
@@ -722,3 +722,39 @@ form .form-control {
     padding-left: 85px;
 }
 */
+
+
+
+
+/*
+=============================================================
+                        GALLERY
+=============================================================*/
+
+h1{
+    font-family: Roboto;
+    font-size: 3em;
+    border-bottom: 2px solid #008ecc;
+    width: 400px;
+    text-align: center;
+    box-shadow: 4px 4px 5px #888888;
+    margin-top: 10px;
+}
+
+img{
+    width: 350px;
+    height: 250px;
+    margin: 10px;
+    transition: all .5s; /* smooth transition*/
+    -moz-transition: all .5s;
+    -webkit-transition: all .5s;
+    -ms-transition: all .5s;
+}
+
+img:hover{
+    transform: scale(1.1);
+    
+}
+
+
+
